--- a/Assets/_Project/Outdated/_TestingScripts/TestingEditor.uxml
+++ b/Assets/_Project/Outdated/_TestingScripts/TestingEditor.uxml
@@ -1,4 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
     <Style src="project://database/Assets/_Project/Outdated/_TestingScripts/TestingEditor.uss?fileID=7433441132597879392&amp;guid=2a5b7518d6c8f6f4fb0aecf4af3c1245&amp;type=3#TestingEditor" />
-    <UIAssets.UIVideoPlayer />
+    <UIAssets.UIVideoPlayer style="height: 359px; justify-content: center; align-items: center; padding-bottom: 50px;" />
+    <UIAssets.Tracks />
 </ui:UXML>
