--- a/Assets/_Project/Editor/PlaytestReviewer.uxml
+++ b/Assets/_Project/Editor/PlaytestReviewer.uxml
@@ -28,9 +28,9 @@
             </ui:VisualElement>
             <ui:VisualElement style="flex-grow: 1; margin-top: 0; border-top-left-radius: 1px; border-top-right-radius: 1px; border-bottom-right-radius: 1px; border-bottom-left-radius: 1px; transition-property: all; transition-duration: 0s; transition-timing-function: ease; transition-delay: 0s;" />
         </ui:VisualElement>
-        <ui:VisualElement name="TrackView" style="flex-grow: 0; height: 100%; max-height: 100%; background-color: rgb(36, 36, 36); width: 80%; min-width: 0; flex-direction: column; border-top-width: 0; border-right-width: 1px; border-bottom-width: 0; border-left-width: 0; padding-left: 0; flex-shrink: 0; max-width: 100%; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);">
+        <ui:VisualElement name="TrackView" style="flex-grow: 0; height: 100%; max-height: 100%; background-color: rgb(36, 36, 36); width: 80%; min-width: 0; flex-direction: column; border-top-width: 0; border-right-width: 1px; border-bottom-width: 0; border-left-width: 0; padding-left: 0; flex-shrink: 0; max-width: 100%;">
             <ui:ScrollView mode="VerticalAndHorizontal" name="TimeScroll" style="width: 100%;">
-                <ui:VisualElement name="TimeView" style="flex-grow: 1; height: 25px; max-height: 25px; background-color: rgb(60, 60, 60); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 1px; border-right-width: 0; border-bottom-width: 1px; border-left-width: 1px; justify-content: flex-start; padding-top: 0; flex-direction: row; width: 100%; min-width: 100%; max-width: 100%;" />
+                <ui:VisualElement name="TimeView" style="flex-grow: 1; height: 25px; max-height: 25px; background-color: rgb(60, 60, 60); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 0; border-right-width: 0; border-bottom-width: 1px; border-left-width: 1px; justify-content: flex-start; padding-top: 0; flex-direction: row; width: 100%; min-width: 100%; max-width: 100%;" />
             </ui:ScrollView>
         </ui:VisualElement>
     </ui:VisualElement>
