--- a/Assets/_Project/Editor/PlaytestReviewer.uxml
+++ b/Assets/_Project/Editor/PlaytestReviewer.uxml
@@ -26,13 +26,13 @@
                 <ui:VisualElement style="flex-grow: 1; width: 30px; max-width: 10px;" />
                 <ui:Button style="width: 50px; padding-right: 0; margin-right: 0; padding-left: 0; margin-left: 0; margin-bottom: 0; padding-bottom: 0; padding-top: 0; margin-top: 0; height: 100%; border-top-left-radius: 0; border-top-right-radius: 0; border-bottom-right-radius: 0; border-bottom-left-radius: 0; border-top-width: 0; border-right-width: 0; border-bottom-width: 0; border-left-width: 0; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); background-image: url(&quot;project://database/Assets/_Project/Icons/ToolControls/AddTracks.png?fileID=2800000&amp;guid=82f2e714ef61ca24888f1c9f032bb334&amp;type=3#AddTracks&quot;);" />
             </ui:VisualElement>
-            <ui:VisualElement style="flex-grow: 1; margin-top: 0; border-top-left-radius: 1px; border-top-right-radius: 1px; border-bottom-right-radius: 1px; border-bottom-left-radius: 1px; transition-property: all; transition-duration: 0s; transition-timing-function: ease; transition-delay: 0s;" />
+            <ui:VisualElement name="TrackDescriptions" style="flex-grow: 1; margin-top: 0; border-top-left-radius: 1px; border-top-right-radius: 1px; border-bottom-right-radius: 1px; border-bottom-left-radius: 1px; transition-property: all; transition-duration: 0s; transition-timing-function: ease; transition-delay: 0s; align-self: flex-end;" />
         </ui:VisualElement>
         <ui:VisualElement name="TrackView" style="flex-grow: 0; height: 100%; max-height: 100%; background-color: rgb(36, 36, 36); width: 80%; min-width: 0; flex-direction: column; border-top-width: 0; border-right-width: 1px; border-bottom-width: 0; border-left-width: 0; padding-left: 0; flex-shrink: 0; max-width: 100%;">
             <ui:ScrollView mode="VerticalAndHorizontal" name="TimeScroll" style="width: 100%; margin-top: -1px;">
-                <ui:VisualElement name="TimeView" style="flex-grow: 1; height: 25px; max-height: 25px; background-color: rgb(60, 60, 60); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 1.5px; border-right-width: 0; border-bottom-width: 1px; border-left-width: 1px; justify-content: flex-start; padding-top: 0; flex-direction: row; width: 100%; min-width: 100%; max-width: 100%;" />
+                <ui:VisualElement name="TimeView" style="flex-grow: 1; height: 27px; max-height: 27px; background-color: rgb(60, 60, 60); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 1.5px; border-right-width: 0; border-bottom-width: 1px; border-left-width: 1px; justify-content: flex-start; padding-top: 0; flex-direction: row; width: 100%; min-width: 100%; max-width: 100%;" />
             </ui:ScrollView>
-            <ui:ScrollView style="height: 100%; border-top-width: 1px;" />
+            <ui:ScrollView name="TrackInformation" style="height: 100%; border-top-width: 1px;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
