--- a/Assets/_Project/Editor/PlaytestReviewer.uxml
+++ b/Assets/_Project/Editor/PlaytestReviewer.uxml
@@ -32,7 +32,7 @@
             <ui:ScrollView mode="VerticalAndHorizontal" name="TimeScroll" style="width: 100%; margin-top: -1px;">
                 <ui:VisualElement name="TimeView" style="flex-grow: 1; height: 27px; max-height: 27px; background-color: rgb(60, 60, 60); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 1.5px; border-right-width: 0; border-bottom-width: 1px; border-left-width: 1px; justify-content: flex-start; padding-top: 0; flex-direction: row; width: 100%; min-width: 100%; max-width: 100%;" />
             </ui:ScrollView>
-            <ui:ScrollView name="TrackInformation" style="height: 100%; border-top-width: 1px;" />
+            <ui:ScrollView name="TrackInformation" style="height: 100%; border-top-width: 1px; flex-shrink: 1; flex-grow: 1; max-width: 10000%;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
