--- a/Assets/_Project/Editor/PlaytestReviewer.uxml
+++ b/Assets/_Project/Editor/PlaytestReviewer.uxml
@@ -30,9 +30,9 @@
         </ui:VisualElement>
         <ui:VisualElement name="TrackView" style="flex-grow: 0; height: 100%; max-height: 100%; background-color: rgb(36, 36, 36); width: 80%; min-width: 0; flex-direction: column; border-top-width: 0; border-right-width: 1px; border-bottom-width: 0; border-left-width: 0; padding-left: 0; flex-shrink: 0; max-width: 100%;">
             <ui:ScrollView mode="VerticalAndHorizontal" name="TimeScroll" style="width: 100%; margin-top: -1px;">
-                <ui:VisualElement name="TimeView" style="flex-grow: 1; height: 27px; max-height: 27px; background-color: rgb(60, 60, 60); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 1.5px; border-right-width: 0; border-bottom-width: 1px; border-left-width: 1px; justify-content: flex-start; padding-top: 0; flex-direction: row; width: 100%; min-width: 100%; max-width: 100%;" />
+                <ui:VisualElement name="TimeView" style="flex-grow: 1; height: 27px; max-height: 27px; background-color: rgb(60, 60, 60); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 1.5px; border-right-width: 0; border-bottom-width: 1px; border-left-width: 1px; justify-content: flex-start; padding-top: 0; flex-direction: row; width: 100%; min-width: 10%; max-width: 100%;" />
             </ui:ScrollView>
-            <ui:ScrollView name="TrackInformation" style="height: 100%; border-top-width: 1px; flex-shrink: 1; flex-grow: 1; max-width: 10000%;" />
+            <ui:ScrollView name="TrackInformation" horizontal-scroller-visibility="Hidden" mode="VerticalAndHorizontal" style="height: 100%; border-top-width: 1px; flex-shrink: 1; flex-grow: 1; max-width: 10000%;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
